All requirements done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-            <intent-filter>
+           <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".DuaDetailActivity"
@@ -30,11 +29,24 @@
             android:name=".PreferencesActivity"
             android:label="@string/settings">
         </activity>
-        <activity android:name=".BookMarksActivity"
-                  android:label="@string/favourites"
-                >
+        <activity
+            android:name=".BookMarksActivity"
+            android:label="@string/favourites">
         </activity>
-        <receiver android:name=".utils.ShareBroadcastReceiver" android:exported="true"/>
+
+        <receiver
+            android:name=".utils.ShareBroadcastReceiver"
+            android:exported="true"/>
+
+        <activity android:name=".SplashScreen"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
